--- a/index.html
+++ b/index.html
@@ -28,28 +28,34 @@
         </div>
     </div>
 
-    <div class="container">
         <div id="yellow">
-            <h2>Yellow</h2>
-            <p>Yellow is the color between orange and green on the spectrum of visible light. It is evoked by light with a dominant wavelength of roughly 570–590 nm. It is a primary color in subtractive color systems, used in painting or color printing. In the RGB color model, used to create colors on television and computer screens, yellow is a secondary color made by combining red and green at equal intensity. Carotenoids give the characteristic yellow color to autumn leaves, corn, canaries, daffodils, and lemons, as well as egg yolks, buttercups, and bananas. They absorb light energy and protect plants from photodamage. Sunlight has a slight yellowish hue, due to the surface temperature of the sun. Because it was widely available, yellow ochre pigment was one of the first colors used in art.</p>
-            <p>According to surveys in Europe, Canada, and the United States, yellow is the color people most often associate with amusement, gentleness, humor, and spontaneity, but also with duplicity, envy, jealousy, avarice, and, in the U.S., with cowardice. In Iran it has connotations of pallor/sickness, but also wisdom and connection. In China and many Asian countries, it is seen as the color of happiness, glory, harmony and wisdom.</p>
+            <div class="container">
+                <h2>Yellow</h2>
+                <p>Yellow is the color between orange and green on the spectrum of visible light. It is evoked by light with a dominant wavelength of roughly 570–590 nm. It is a primary color in subtractive color systems, used in painting or color printing. In the RGB color model, used to create colors on television and computer screens, yellow is a secondary color made by combining red and green at equal intensity. Carotenoids give the characteristic yellow color to autumn leaves, corn, canaries, daffodils, and lemons, as well as egg yolks, buttercups, and bananas. They absorb light energy and protect plants from photodamage. Sunlight has a slight yellowish hue, due to the surface temperature of the sun. Because it was widely available, yellow ochre pigment was one of the first colors used in art.</p>
+                <p>According to surveys in Europe, Canada, and the United States, yellow is the color people most often associate with amusement, gentleness, humor, and spontaneity, but also with duplicity, envy, jealousy, avarice, and, in the U.S., with cowardice. In Iran it has connotations of pallor/sickness, but also wisdom and connection. In China and many Asian countries, it is seen as the color of happiness, glory, harmony and wisdom.</p>
+            </div>
         </div>
 
         <div id="red">
-            <h2>Red</h2>
-            <p>Red is the color at the end of the visible spectrum of light, next to orange and opposite violet. It is a primary color in the RGB color model and the CMYK color model, and is the complementary color of cyan. Reds range from the brilliant yellow-tinged scarlet and vermillion to bluish-red crimson, and vary in shade from the pale red pink to the dark red burgundy. The red sky at sunset results from Rayleigh scattering, while the red color of the Grand Canyon and other geological features is caused by hematite or red ochre, both forms of iron oxide. Iron oxide also gives the red color to the planet Mars. The red colour of blood comes from protein hemoglobin, while ripe strawberries, red apples and reddish autumn leaves are colored by anthocyanins.</p>
-            <p>Since red is the color of blood, it has historically been associated with sacrifice, danger and courage. Modern surveys in Europe and the United States show red is also the color most commonly associated with heat, activity, passion, sexuality, anger, love and joy. In China, India and many other Asian countries it is the color of symbolizing happiness and good fortune.</p>
+            <div class="container">
+                <h2>Red</h2>
+                <p>Red is the color at the end of the visible spectrum of light, next to orange and opposite violet. It is a primary color in the RGB color model and the CMYK color model, and is the complementary color of cyan. Reds range from the brilliant yellow-tinged scarlet and vermillion to bluish-red crimson, and vary in shade from the pale red pink to the dark red burgundy. The red sky at sunset results from Rayleigh scattering, while the red color of the Grand Canyon and other geological features is caused by hematite or red ochre, both forms of iron oxide. Iron oxide also gives the red color to the planet Mars. The red colour of blood comes from protein hemoglobin, while ripe strawberries, red apples and reddish autumn leaves are colored by anthocyanins.</p>
+                <p>Since red is the color of blood, it has historically been associated with sacrifice, danger and courage. Modern surveys in Europe and the United States show red is also the color most commonly associated with heat, activity, passion, sexuality, anger, love and joy. In China, India and many other Asian countries it is the color of symbolizing happiness and good fortune.</p>
+            </div>
         </div>
 
         <div id="blue">
-            <h2>Blue</h2>
-            <p>Blue is one of the three primary colours of pigments in painting and traditional colour theory, as well as in the RGB colour model. It lies between violet and green on the spectrum of visible light. The eye perceives blue when observing light with a dominant wavelength between approximately 450 and 495 nanometres. Most blues contain a slight mixture of other colors; azure contains some green, while ultramarine contains some violet. The clear daytime sky and the deep sea appear blue because of an optical effect known as Rayleigh scattering. An optical effect called Tyndall scattering explains blue eyes. Distant objects appear more blue because of another optical effect called atmospheric perspective.</p>
-            <p>Surveys in the US and Europe show that blue is the colour most commonly associated with harmony, faithfulness, confidence, distance, infinity, the imagination, cold, and sometimes with sadness. In US and European public opinion polls it is the most popular colour, chosen by almost half of both men and women as their favourite colour. The same surveys also showed that blue was the colour most associated with the masculine, just ahead of black, and was also the colour most associated with intelligence, knowledge, calm and concentration.</p>
+            <div class="container">
+                <h2>Blue</h2>
+                <p>Blue is one of the three primary colours of pigments in painting and traditional colour theory, as well as in the RGB colour model. It lies between violet and green on the spectrum of visible light. The eye perceives blue when observing light with a dominant wavelength between approximately 450 and 495 nanometres. Most blues contain a slight mixture of other colors; azure contains some green, while ultramarine contains some violet. The clear daytime sky and the deep sea appear blue because of an optical effect known as Rayleigh scattering. An optical effect called Tyndall scattering explains blue eyes. Distant objects appear more blue because of another optical effect called atmospheric perspective.</p>
+                <p>Surveys in the US and Europe show that blue is the colour most commonly associated with harmony, faithfulness, confidence, distance, infinity, the imagination, cold, and sometimes with sadness. In US and European public opinion polls it is the most popular colour, chosen by almost half of both men and women as their favourite colour. The same surveys also showed that blue was the colour most associated with the masculine, just ahead of black, and was also the colour most associated with intelligence, knowledge, calm and concentration.</p>
+            </div>
         </div>
 
-    <footer>
-        <p>All information was taken from <a href="https://www.wikipedia.org/">Wikipedia</a></p>
-    </footer>
+    <div class="container">
+        <footer>
+            <p>All information was taken from <a href="https://www.wikipedia.org/">Wikipedia</a></p>
+        </footer>
     </div>
 </body>
 </html>
